# Check-Bump

./: README.md  action.yml  pyproject.toml  requirements_dev.txt
.github/workflows/: main.yml  release.yml
check_bump/: __init__.py  exit_codes.py  git.py  path.py  util.py
check_bump/methods/: __init__.py  regex.py  toml.py  touch.py
tests/: test_unit.py
